[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-star-gifts"
version = "0.1.0"
description = "Скрипт для отправки Star Gifts в Telegram"
dependencies = [
    "telethon",
    "rich",
]

[project.scripts]
tg-gifts = "tg_star_gifts.gift:main"
