[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-star-gifts"
version = "1.2.0"
description = "Скрипт для отправки Star Gifts в Telegram"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "telethon",
    "rich",
]

[project.scripts]
tg-gifts = "gift:run"
