[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-star-gifts"
version = "4.3.0"
description = "UserBot для управления Star Gifts через Избранное"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "telethon",
]

[project.scripts]
tg-gifts = "gift:run"
